src/main/java/com/example/app/error/ErrorCode.java
package com.example.app.error;

public class ErrorCode {
    public static final String OBJECT_NOT_FOUND = "404";
    public static final String OBJECT_ALREADY_EXISTS = "400";

}
